# waky

./: .bowerrc  .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  bower.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  waky.conf
.github/workflows/: ci.yml  cicd.yml  deploy.yml  pythonapp.yml  test.yml
docker/: Dockerfile
static/style/: waky.css
tests/: test_waky.py
waky/: __init__.py  conf.py  device.py  inventory.py  logging_config.py  main.py  settings.py
waky/core/: __init__.py  device.py  inventory.py
waky/templates/: base.html  index.html
