[tool.poetry]
name = "waky"
version = "0.1.0"
description = ""
authors = ["Nicolas Landier <nicolas.landier@spendesk.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.12.2"
gunicorn = "^20.0.4"
uvloop = "^0.14.0"
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
